add charts, fix bugs

--- a/Neural/Form1.resx
+++ b/Neural/Form1.resx
@@ -140,6 +140,20 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>269, 17</value>
   </metadata>
+  <data name="validChart.RangeX" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAElBRm9yZ2UsIFZlcnNpb249Mi4yLjUuMCwgQ3VsdHVyZT1uZXV0
+        cmFsLCBQdWJsaWNLZXlUb2tlbj1jMWRiNmZmNGVhYTA2YWViBQEAAAAMQUZvcmdlLlJhbmdlAgAAAANt
+        aW4DbWF4AAALCwIAAAAAAAAAAACAPws=
+</value>
+  </data>
+  <data name="validChart.RangeY" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAElBRm9yZ2UsIFZlcnNpb249Mi4yLjUuMCwgQ3VsdHVyZT1uZXV0
+        cmFsLCBQdWJsaWNLZXlUb2tlbj1jMWRiNmZmNGVhYTA2YWViBQEAAAAMQUZvcmdlLlJhbmdlAgAAAANt
+        aW4DbWF4AAALCwIAAAAAAAAAAACAPws=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>33</value>
   </metadata>
